--- a/committee.html
+++ b/committee.html
@@ -55,7 +55,7 @@
                     </div>
 
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Social</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Social</a>
                         <div class="dropdown-menu m-0">
                             <a href="activities.html" class="dropdown-item">Activities</a>
                             <a href="classes.html" class="dropdown-item">Classes</a>
@@ -66,20 +66,19 @@
                         </div>
                     </div>
 
-                    <a href="committee.html" class="nav-item nav-link">Committee</a>
+                    <a href="committee.html" class="nav-item nav-link active">Committee</a>
                     <a href="vision-and-mission.html" class="nav-item nav-link">Vision&Mission</a>
                     <a href="contact.html" class="nav-item nav-link">Contacts</a>
                 </div>
             </div>
         </nav>
-
         <div class="container-fluid bg-primary py-5 bg-header" style="margin-bottom: 90px;">
             <div class="row py-5">
                 <div class="col-12 pt-lg-5 mt-lg-5 text-center">
-                    <h1 class="display-4 text-white animated zoomIn">Contract</h1>
+                    <h1 class="display-4 text-white animated zoomIn">Committee</h1>
                     <a href="" class="h5 text-white">Home</a>
                     <i class="far fa-circle text-white px-2"></i>
-                    <a href="" class="h5 text-white">Contract</a>
+                    <a href="" class="h5 text-white">Committee</a>
                 </div>
             </div>
         </div>
@@ -88,130 +87,22 @@
 
     <!-- Members Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="section-title text-center position-relative pb-3 mb-4 mx-auto" style="max-width: 600px">
-                <h5 class="fw-bold text-primary text-uppercase">contracts</h5>
-                <h1 class="mb-0">Contracts<br> Universities and Institutes</h1>
-                <h5 class="mb-0">to introduce
-                    poor students to scholarships</h5>
-            </div>
-            <div class="wow fadeInUp" data-wow-delay="0.6s">
-                <div class="wow fadeInUp" data-wow-delay="0.6s"
-                    style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
-
-                    <div class="row w-100px">
-                        <div class="col-xl-6">
-                            <div style="display: flex;" class="my-2">
-                                <a href="#" class="shadow-sm">
-                                    <img src="img/contracts/heraykardan.PNG" alt="">
-                                </a>
-
-                                <div
-                                    style="display: flex;flex-direction: column;justify-content: center;padding: 0 15px;">
-                                    <h5>
-                                        Contract with Heray Kardan Institutes
-                                    </h5>
-                                    <strong>
-                                        <em>
-                                            For Scholarship
-                                        </em>
-                                    </strong>
-                                    <small><a href="img/contracts/contract-with-heraykardan.pdf"
-                                            target="_blank">More</a></small>
-                                </div>
-                            </div>
-
-                            <div style="display: flex;" class="my-2">
-                                <a href="#" class="shadow-sm">
-                                    <img src="img/contracts/khaja-abdullah-ansari.PNG" alt="">
-                                </a>
-
-                                <div
-                                    style="display: flex;flex-direction: column;justify-content: center;padding: 0 15px;">
-                                    <h5>
-                                        Contract With Khaja Abdullah Ansari
-                                    </h5>
-                                    <strong>
-                                        <em>
-                                            For Scholarship
-                                        </em>
-                                    </strong>
-                                    <small><a href="img/contracts/contract-with-khaja-abdullah-ansari.pdf"
-                                            target="_blank">More</a></small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-6"></div>
-                    </div>
-                </div>
-            </div>
+        <div class="section-title text-center position-relative pb-3 mb-4 mx-auto" style="max-width: 600px">
+            <h5 class="fw-bold text-primary text-uppercase">Committee</h5>
+            <h1 class="mb-0">Youth Savior Foundation</h1>
+            <h5 class="mb-0">
+                Youth Savior Social Foundation has 11 committee and their goal is better managing of the
+                rsponsibalities of the organization
+            </h5>
         </div>
+
+
+        <!-- <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12"> -->
+        <img src="chart.png" alt="chart" style="width:100%;">
+        <!-- </div> -->
+
     </div>
-    <!-- Members End -->
 
-    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="section-title text-center position-relative pb-3 mb-4 mx-auto" style="max-width: 800px">
-                <h5 class="fw-bold text-primary text-uppercase">Contracts</h5>
-                <h1 class="mb-0">Net-Work of CIVIL Institutes</h1>
-                <h5>
-                    Signing a memorandum of understanding with the network of
-                    civil institution
-                </h5>
-            </div>
-            <div class="wow fadeInUp" data-wow-delay="0.6s">
-                <div class="wow fadeInUp" data-wow-delay="0.6s"
-                    style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
-
-                    <div class="row w-100px">
-                        <div class="col-xl-6">
-                            <div style="display: flex;" class="my-2">
-                                <a href="#" class="shadow-sm">
-                                    <img src="img/contracts/SOACS.PNG" alt="">
-                                </a>
-
-                                <div
-                                    style="display: flex;flex-direction: column;justify-content: center;padding: 0 15px;">
-                                    <h5>
-                                        Contract with SOACS
-                                    </h5>
-                                    <strong>
-                                        <em>
-                                            For Scholarship
-                                        </em>
-                                    </strong>
-                                    <small><a href="img/contracts/contract-with-SOACS.pdf"
-                                            target="_blank">More</a></small>
-                                </div>
-                            </div>
-
-                            <div style="display: flex;" class="my-2">
-                                <a href="#" class="shadow-sm">
-                                    <img src="img/contracts/afghanistan-new-generation-organization.PNG" alt="">
-                                </a>
-
-                                <div
-                                    style="display: flex;flex-direction: column;justify-content: center;padding: 0 15px;">
-                                    <h5>
-                                        Contract with Afghanistan New Generation Organization
-                                    </h5>
-                                    <strong>
-                                        <em>
-                                            For Scholarship
-                                        </em>
-                                    </strong>
-                                    <small><a href="img/contracts/afghanistan-new-generation-organization.pdf"
-                                            target="_blank">More</a></small>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-xl-6"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light mt-5 wow fadeInUp" data-wow-delay="0.1s">
@@ -330,7 +221,6 @@
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
-
 </body>
 
 </html>
