--- a/contact.html
+++ b/contact.html
@@ -3,35 +3,23 @@
 
 
 <head>
-    <meta charset="utf-8" />
-    <title>youth Savior Foundation</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="youth Savior Foundation" name="keywords" />
-    <meta content="youth Savior Foundation" name="description" />
-
-    <!-- Favicon -->
-    <link href="img/favicon.png" rel="icon" />
-
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="utf-8">
+    <title>Y.S.F | Youth Savior Foundation</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+    <link href="img/favicon.png" rel="icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Rubik:wght@400;500;600;700&display=swap"
-        rel="stylesheet" />
-
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
+        rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
     <link href="css/fontawesome-all.min.css" rel="stylesheet" />
-
-    <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
     <link href="lib/animate/animate.min.css" rel="stylesheet" />
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/bootstrap.css" />
-
-    <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
 </head>
 
@@ -57,10 +45,11 @@
                 <div class="navbar-nav ms-auto py-0">
                     <a href="index.html" class="nav-item nav-link">Home</a>
 
-                    <div class="nav-item dropdown ">
-                        <a href="#" class="nav-link dropdown-toggle " data-bs-toggle="dropdown">About</a>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                         <div class="dropdown-menu m-0">
                             <a href="about-us.html" class="dropdown-item">About Us</a>
+                            <a href="Hossaini.html" class="dropdown-item">About Founder</a>
                             <a href="effective-personalities.html" class="dropdown-item">Effective Personalities</a>
                             <a href="letters-of-appreciation.html" class="dropdown-item">Letters Of Appreciation</a>
                         </div>
@@ -78,13 +67,15 @@
                         </div>
                     </div>
 
+                    <a href="committee.html" class="nav-item nav-link">Committee</a>
                     <a href="vision-and-mission.html" class="nav-item nav-link">Vision&Mission</a>
                     <a href="contact.html" class="nav-item nav-link active">Contacts</a>
                 </div>
             </div>
         </nav>
 
-        <div class="container-fluid bg-primary py-5 bg-header" style="margin-bottom: 90px;">
+        <div class="container-fluid bg-primary py-5"
+            style="margin-bottom: 90px; background: linear-gradient(rgba(9, 30, 62, .7), rgba(9, 30, 62, .7));">
             <div class="row py-5">
                 <div class="col-12 pt-lg-5 mt-lg-5 text-center">
                     <h1 class="display-4 text-white animated zoomIn">Contact Us</h1>
@@ -118,7 +109,6 @@
     </div>
     <!-- Full Screen Search End -->
 
-
     <!-- Contact Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container py-5">
@@ -134,8 +124,8 @@
                             <i class="fa fa-phone-alt text-white"></i>
                         </div>
                         <div class="ps-4">
-                            <h5 class="mb-2">Call to ask any question</h5>
-                            <h4 class="text-primary mb-0">+93 782451915</h4>
+                            <h5 class="mb-2">Call</h5>
+                            <b class="text-primary mb-0">+93 782451915</b>
                         </div>
                     </div>
                 </div>
@@ -146,8 +136,8 @@
                             <i class="fa fa-envelope-open text-white"></i>
                         </div>
                         <div class="ps-4">
-                            <h5 class="mb-2">Email to get free quote</h5>
-                            <h5 class="text-primary mb-0">youthsavior.scf@gmail.com</h5>
+                            <h5 class="mb-2">Email</h5>
+                            <b class="text-primary mb-0">youthsavior.scf@gmail.com</b>
                         </div>
                     </div>
                 </div>
@@ -158,8 +148,8 @@
                             <i class="fa fa-map-marker-alt text-white"></i>
                         </div>
                         <div class="ps-4">
-                            <h5 class="mb-2">Visit our office</h5>
-                            <h4 class="text-primary mb-0">123 Street, Herat, AF</h4>
+                            <h5 class="mb-2">Location</h5>
+                            <b class="text-primary mb-0">Bekrabad, Herat, Afghanistan, 3000</b>
                         </div>
                     </div>
                 </div>
@@ -192,15 +182,15 @@
                 </div>
                 <div class="col-lg-6 wow slideInUp" data-wow-delay="0.6s">
                     <iframe class="position-relative rounded w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2329.300170108831!2d62.22922835992303!3d34.34722306398496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f3ce7ad50095971%3A0x5ccdd0280e14b1da!2z2q_YsNixINis2qnYp9mG2Iwg2YfYsdin2KrYjCDYp9mB2LrYp9mG2LPYqtin2YY!5e0!3m2!1sfa!2s!4v1686982759059!5m2!1sfa!2s"
                         frameborder="0" style="min-height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
                         tabindex="0"></iframe>
+
                 </div>
             </div>
         </div>
     </div>
     <!-- Contact End -->
-
 
     <!-- Vendor Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
@@ -222,26 +212,13 @@
     </div>
     <!-- Vendor End -->
 
-
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light mt-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
             <div class="row gx-5">
                 <div class="col-lg-4 col-md-6 footer-about">
                     <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 p-4"
-                        style="user-select: none;color: transparent;background-image: url(./img/logo.ico);background-size: cover;background-repeat: no-repeat;background-position: center;">
-                        <a href="index.html" class="navbar-brand">
-                            <h1 class="m-0 text-white" style="color: transparent !important">
-                                Naji Youth
-                                <br />
-                                Savior Foundation
-                            </h1>
-                        </a>
-                        <p class="mt-3 mb-4">
-                            Lorem diam sit erat dolor elitr et, diam lorem justo amet clita
-                            stet eos sit. Elitr dolor duo lorem, elitr clita ipsum sea. Diam
-                            amet erat lorem stet eos. Diam amet et kasd eos duo.
-                        </p>
+                        style="min-height: 350px !important;user-select: none;color: transparent;background-image: url(./img/logo.ico);background-size: cover;background-repeat: no-repeat;background-position: center;">
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-6">
@@ -252,7 +229,7 @@
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-geo-alt text-primary me-2"></i>
-                                <p class="mb-0">123 Street, Herat, AF</p>
+                                <p class="mb-0">Bekrabad, Herat, Afghanistan, 3000</p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-primary me-2"></i>
@@ -273,7 +250,7 @@
                                         class="fab fa-linkedin-in fw-normal"></i></a>
                                 <a class="btn btn-primary btn-square me-2" title="Y.S.F Telegram Channel"
                                     target="_blank" href="https://t.me/youthsaviorfoundation"><i
-                                        class="fab fa-telegram fw-normal"></i></a>
+                                        class="fab fa-telegram-plane fw-normal"></i></a>
                                 <a class="btn btn-primary btn-square me-2" href="#"><i
                                         class="fab fa-twitter fw-normal"></i></a>
                             </div>
@@ -286,7 +263,11 @@
                                 <a class="text-light mb-2" href="./index.html"><i
                                         class="fa fa-arrow-right text-primary me-2"></i>Home</a>
                                 <a class="text-light mb-2" href="./about-us.html"><i
-                                        class="fa fa-arrow-right text-primary me-2"></i>About Us</a>
+                                        class="fa fa-arrow-right text-primary me-2"></i>About
+                                    Us</a>
+                                <a class="text-light mb-2" href="./Hossaini.html"><i
+                                        class="fa fa-arrow-right text-primary me-2"></i>About
+                                    Founder</a>
                                 <a class="text-light mb-2" href="./effective-personalities.html"><i
                                         class="fa fa-arrow-right text-primary me-2"></i>Effective Personalities</a>
                                 <a class="text-light mb-2" href="./letters-of-appreciation.html"><i
@@ -306,6 +287,8 @@
                                         class="fa fa-arrow-right text-primary me-2"></i>Contracts</a>
                                 <a class="text-light mb-2" href="./members.html"><i
                                         class="fa fa-arrow-right text-primary me-2"></i>Members</a>
+                                <a class="text-light mb-2" href="./committee.html"><i
+                                        class="fa fa-arrow-right text-primary me-2"></i>Committee</a>
                                 <a class="text-light mb-2" href="./vision-and-mission.html"><i
                                         class="fa fa-arrow-right text-primary me-2"></i>Vision&mission</a>
                                 <a class="text-light mb-2" href="./contact.html"><i
@@ -336,8 +319,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded back-to-top"><i class="bi bi-arrow-up"></i></a>
-
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded back-to-top"><i class="fas fa-angle-up"></i></a>
 
     <!-- JavaScript Libraries -->
     <script src="js/jquery.js"></script>
@@ -347,8 +329,6 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-    <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
 
