--- a/effective-personalities.html
+++ b/effective-personalities.html
@@ -3,63 +3,22 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Y.S.F | youth Savior Foundation</title>
+    <title>Y.S.F | Youth Savior Foundation</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
-
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
-
-    <!-- Google Web Fonts -->
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+    <link href="img/favicon.png" rel="icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Rubik:wght@400;500;600;700&display=swap"
         rel="stylesheet">
-
-    <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
-    <meta charset="utf-8" />
-    <title>youth Savior Foundation</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="youth Savior Foundation" name="keywords" />
-    <meta content="youth Savior Foundation" name="description" />
-
-    <!-- Favicon -->
-    <link href="img/favicon.png" rel="icon" />
-
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Rubik:wght@400;500;600;700&display=swap"
-        rel="stylesheet" />
-
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
     <link href="css/fontawesome-all.min.css" rel="stylesheet" />
-
-    <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
     <link href="lib/animate/animate.min.css" rel="stylesheet" />
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/bootstrap.css" />
-
-    <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
 </head>
 
@@ -85,10 +44,11 @@
                 <div class="navbar-nav ms-auto py-0">
                     <a href="index.html" class="nav-item nav-link">Home</a>
 
-                    <div class="nav-item dropdown ">
+                    <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">About</a>
                         <div class="dropdown-menu m-0">
                             <a href="about-us.html" class="dropdown-item">About Us</a>
+                            <a href="Hossaini.html" class="dropdown-item">About Founder</a>
                             <a href="effective-personalities.html" class="dropdown-item">Effective Personalities</a>
                             <a href="letters-of-appreciation.html" class="dropdown-item">Letters Of Appreciation</a>
                         </div>
@@ -106,11 +66,13 @@
                         </div>
                     </div>
 
+                    <a href="committee.html" class="nav-item nav-link">Committee</a>
                     <a href="vision-and-mission.html" class="nav-item nav-link">Vision&Mission</a>
                     <a href="contact.html" class="nav-item nav-link">Contacts</a>
                 </div>
             </div>
         </nav>
+
         <div class="container-fluid bg-primary py-5 bg-header" style="margin-bottom: 90px;">
             <div class="row py-5">
                 <div class="col-12 pt-lg-5 mt-lg-5 text-center">
@@ -124,7 +86,6 @@
     </div>
     <!-- Navbar End -->
 
-
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="section-title text-center position-relative pb-3 mb-4 mx-auto" style="max-width: 600px">
@@ -137,6 +98,38 @@
             </div>
             <div class="wow fadeInUp" data-wow-delay="0.6s">
                 <div class="album">
+                    <div class="row">
+                        <div class="col-lg-4 col-sm-6">
+                            <img src="img/effective-personalities/img (5).JPG" alt="">
+                            <div class="head-line">
+                                <b class="text-center">something?!#</b>
+                                <p class="effectivePersonalities-p">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit at vel ratione
+                                    officia voluptas modi exercitationem culpa itaque perspiciatis reprehenderit!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6">
+                            <img src="img/effective-personalities/img (6).JPG" alt="">
+                            <div class="head-line">
+                                <b class="text-center">something?!#</b>
+                                <p class="effectivePersonalities-p">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit at vel ratione
+                                    officia voluptas modi exercitationem culpa itaque perspiciatis reprehenderit!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6">
+                            <img src="img/effective-personalities/img (3).jpg" alt="">
+                            <div class="head-line">
+                                <b class="text-center">something?!#</b>
+                                <p class="effectivePersonalities-p">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit at vel ratione
+                                    officia voluptas modi exercitationem culpa itaque perspiciatis reprehenderit!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-lg-4 col-sm-6">
                             <img src="img/effective-personalities/img (1).JPEG" alt="">
@@ -176,6 +169,36 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6">
+                            <img src="img/effective-personalities/img (7).JPG" alt="">
+                            <div class="head-line">
+                                <b class="text-center">something?!#</b>
+                                <p class="effectivePersonalities-p">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit at vel ratione
+                                    officia voluptas modi exercitationem culpa itaque perspiciatis reprehenderit!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6">
+                            <img src="img/effective-personalities/img (1).jpg" alt="">
+                            <div class="head-line">
+                                <b class="text-center">something?!#</b>
+                                <p class="effectivePersonalities-p">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit at vel ratione
+                                    officia voluptas modi exercitationem culpa itaque perspiciatis reprehenderit!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6">
+                            <img src="img/effective-personalities/img (8).JPG" alt="">
+                            <div class="head-line">
+                                <b class="text-center">something?!#</b>
+                                <p class="effectivePersonalities-p">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit at vel ratione
+                                    officia voluptas modi exercitationem culpa itaque perspiciatis reprehenderit!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-sm-6">
                             <img src="img/effective-personalities/img (4).JPG" alt="">
                             <div class="head-line">
                                 <b class="text-center">Mr. Rahmani</b>
@@ -190,26 +213,13 @@
         </div>
     </div>
 
-
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light mt-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
             <div class="row gx-5">
                 <div class="col-lg-4 col-md-6 footer-about">
                     <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 p-4"
-                        style="user-select: none;color: transparent;background-image: url(./img/logo.ico);background-size: cover;background-repeat: no-repeat;background-position: center;">
-                        <a href="index.html" class="navbar-brand">
-                            <h1 class="m-0 text-white" style="color: transparent !important">
-                                Naji Youth
-                                <br />
-                                Savior Foundation
-                            </h1>
-                        </a>
-                        <p class="mt-3 mb-4">
-                            Lorem diam sit erat dolor elitr et, diam lorem justo amet clita
-                            stet eos sit. Elitr dolor duo lorem, elitr clita ipsum sea. Diam
-                            amet erat lorem stet eos. Diam amet et kasd eos duo.
-                        </p>
+                        style="min-height: 350px !important;user-select: none;color: transparent;background-image: url(./img/logo.ico);background-size: cover;background-repeat: no-repeat;background-position: center;">
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-6">
@@ -220,7 +230,7 @@
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-geo-alt text-primary me-2"></i>
-                                <p class="mb-0">123 Street, Herat, AF</p>
+                                <p class="mb-0">Bekrabad, Herat, Afghanistan, 3000</p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-primary me-2"></i>
@@ -241,7 +251,7 @@
                                         class="fab fa-linkedin-in fw-normal"></i></a>
                                 <a class="btn btn-primary btn-square me-2" title="Y.S.F Telegram Channel"
                                     target="_blank" href="https://t.me/youthsaviorfoundation"><i
-                                        class="fab fa-telegram fw-normal"></i></a>
+                                        class="fab fa-telegram-plane fw-normal"></i></a>
                                 <a class="btn btn-primary btn-square me-2" href="#"><i
                                         class="fab fa-twitter fw-normal"></i></a>
                             </div>
@@ -254,7 +264,11 @@
                                 <a class="text-light mb-2" href="./index.html"><i
                                         class="fa fa-arrow-right text-primary me-2"></i>Home</a>
                                 <a class="text-light mb-2" href="./about-us.html"><i
-                                        class="fa fa-arrow-right text-primary me-2"></i>About Us</a>
+                                        class="fa fa-arrow-right text-primary me-2"></i>About
+                                    Us</a>
+                                <a class="text-light mb-2" href="./Hossaini.html"><i
+                                        class="fa fa-arrow-right text-primary me-2"></i>About
+                                    Founder</a>
                                 <a class="text-light mb-2" href="./effective-personalities.html"><i
                                         class="fa fa-arrow-right text-primary me-2"></i>Effective Personalities</a>
                                 <a class="text-light mb-2" href="./letters-of-appreciation.html"><i
@@ -274,6 +288,8 @@
                                         class="fa fa-arrow-right text-primary me-2"></i>Contracts</a>
                                 <a class="text-light mb-2" href="./members.html"><i
                                         class="fa fa-arrow-right text-primary me-2"></i>Members</a>
+                                <a class="text-light mb-2" href="./committee.html"><i
+                                        class="fa fa-arrow-right text-primary me-2"></i>Committee</a>
                                 <a class="text-light mb-2" href="./vision-and-mission.html"><i
                                         class="fa fa-arrow-right text-primary me-2"></i>Vision&mission</a>
                                 <a class="text-light mb-2" href="./contact.html"><i
@@ -313,10 +329,7 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-    <!-- Template Javascript -->
     <script src="js/main.js"></script>
-
 </body>
 
 </html>
