--- a/index.html
+++ b/index.html
@@ -3,63 +3,26 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Y.S.F | youth Savior Foundation</title>
+  <title>Y.S.F | Youth Savior Foundation</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="Free HTML Templates" name="keywords">
-  <meta content="Free HTML Templates" name="description">
+  <meta
+    content="Youth,Savior,Foundation,Youth Savior,Youth Foundation,YSF,ysf,y.s.f,Y.S.F,youth,savior,foundation,Habibullah,Hossaini,habibullah,hossaini,youth savior foundation,Youth Savior Foundation,Habibullah Hossaini"
+    name="keywords">
+  <meta content="Youth Savior Foundation" name="description">
+  <meta name="author" content="Edris Taji ,Shoaib Taji" />
 
-  <!-- Favicon -->
   <link href="img/favicon.png" rel="icon">
-
-  <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
     href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Rubik:wght@400;500;600;700&display=swap"
     rel="stylesheet">
-
-  <!-- Icon Font Stylesheet -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
-  <!-- Libraries Stylesheet -->
-  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="lib/animate/animate.min.css" rel="stylesheet">
-
-  <!-- Customized Bootstrap Stylesheet -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Template Stylesheet -->
-  <link href="css/style.css" rel="stylesheet">
-  <meta charset="utf-8" />
-  <title>youth Savior Foundation</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <meta content="youth Savior Foundation" name="keywords" />
-  <meta content="youth Savior Foundation" name="description" />
-
-  <!-- Favicon -->
-  <link href="img/favicon.png" rel="icon" />
-
-  <!-- Google Web Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Rubik:wght@400;500;600;700&display=swap"
-    rel="stylesheet" />
-
-  <!-- Icon Font Stylesheet -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
   <link href="css/fontawesome-all.min.css" rel="stylesheet" />
-
-  <!-- Libraries Stylesheet -->
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
   <link href="lib/animate/animate.min.css" rel="stylesheet" />
-
-  <!-- Customized Bootstrap Stylesheet -->
-  <link href="css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/bootstrap.css" />
-
-  <!-- Template Stylesheet -->
   <link href="css/style.css" rel="stylesheet" />
 </head>
 
@@ -89,6 +52,7 @@
             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
             <div class="dropdown-menu m-0">
               <a href="about-us.html" class="dropdown-item">About Us</a>
+              <a href="Hossaini.html" class="dropdown-item">About Founder</a>
               <a href="effective-personalities.html" class="dropdown-item">Effective Personalities</a>
               <a href="letters-of-appreciation.html" class="dropdown-item">Letters Of Appreciation</a>
             </div>
@@ -106,6 +70,7 @@
             </div>
           </div>
 
+          <a href="committee.html" class="nav-item nav-link">Committee</a>
           <a href="vision-and-mission.html" class="nav-item nav-link">Vision&Mission</a>
           <a href="contact.html" class="nav-item nav-link">Contacts</a>
         </div>
@@ -133,6 +98,7 @@
         <div class="carousel-item">
           <img class="w-100" src="img/carousel-2.JPG" alt="Image" />
           <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+
             <div class="p-3" style="max-width: 900px">
               <h5 class="text-white text-uppercase mb-3 animated slideInDown">
                 بنیاداجتماعی-فرهنگی جوانان ناجی
@@ -144,6 +110,25 @@
               <a href="./contact.html" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">ارتباط با
                 ما</a>
             </div>
+
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="w-100" src="img/Hossaini/hosaini_crosel.jpg" style="width: 331; height: 100;" alt="Image" />
+          <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+
+            <div class="p-3" style="max-width: 900px">
+              <h5 class="text-white text-uppercase mb-3 animated slideInDown">
+                Youth Savior Foundation
+              </h5>
+              <h1 class="display-1 text-white mb-md-4 animated zoomIn">
+                YOUTH SAVIOR FOUNDATION
+              </h1>
+              <a href="./about-us.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">About Us</a>
+              <a href="./contact.html" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact
+                Us</a>
+            </div>
+
           </div>
         </div>
       </div>
@@ -156,6 +141,8 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+
+
   </div>
   <!-- Navbar & Carousel End -->
 
@@ -230,7 +217,7 @@
   </div>
   <!-- About us End -->
 
-  <!-- Fonder of Naji Start -->
+  <!-- Founder of Naji Start -->
   <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container py-5">
       <div class="row g-5">
@@ -244,33 +231,36 @@
             <img class="w-100 rounded wow zoomIn" data-wow-delay="0.9s" src="img/Hossaini/img (1).jpg"
               style="object-fit: cover" />
             <b class="founder-name">
-              Sayed Habibullah Hossaini Administer of  Youth Savior Foundation
+              Sayed Habibullah Hossaini
+              <!-- Administer of  Youth Savior Foundation -->
             </b>
           </div>
         </div>
 
         <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
           <div class="section-title position-relative pb-3 mb-5">
-            <h5 class="fw-bold text-primary text-uppercase">Fonder</h5>
-            <h1 class="mb-0">About Fonder</h1>
+            <h5 class="fw-bold text-primary text-uppercase">Founder</h5>
+            <h1 class="mb-0">About Founder</h1>
           </div>
-          <p class="mb-4">
-            Sayed Habibullah Hossaini was born in 1994 in a science-loving and culture-loving family in Herat,
-            Afghanistan. In 2013, he successfully graduated from Ostad Riaz High School in Herat and started the
-            Faculty of Law and Political Sciences, Department of Administrative & Diplomacy in Jami University. After
-            graduated from faculty of Law and Political Science, Hossaini got the idea of establishing a social
-            institution to struggle for Human Rights, Women Identity, Women Empowerment, Afghan youth capacity
-            building, liberal studies meetings and seminars for afghan youths. So...
+          <p>
+            Sayed Habibullah Hossaini was born in 1994 Herat, Afghanistan. He grew up in a middle-class family. His
+            parents were
+            both educators and instilled a love of learning in their children from a young age.
+            Mr. Hossaini excelled in his studies and obtained a Bachelor's degree in law and political science from Jami
+            University.
+            During his time at the university, Sayed was actively involved in various student organizations and clubs,
+            where he
+            honed his leadership...
           </p>
 
-          <a href="./Hossaini.html" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">
+          <a href="./Hossaini.html" class="btn btn-primary py-2 px-3 wow zoomIn" data-wow-delay="0.5s">
             Read more
           </a>
         </div>
       </div>
     </div>
   </div>
-  <!-- Fonder of Naji End -->
+  <!-- Founder of Naji End -->
 
   <!-- Members Start -->
   <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
@@ -421,25 +411,14 @@
       </div>
     </div>
   </div>
+
   <!-- Footer Start -->
   <div class="container-fluid bg-dark text-light mt-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container">
       <div class="row gx-5">
         <div class="col-lg-4 col-md-6 footer-about">
           <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 p-4"
-            style="user-select: none;color: transparent;background-image: url(./img/logo.ico);background-size: cover;background-repeat: no-repeat;background-position: center;">
-            <a href="index.html" class="navbar-brand">
-              <h1 class="m-0 text-white" style="color: transparent !important">
-                Naji Youth
-                <br />
-                Savior Foundation
-              </h1>
-            </a>
-            <p class="mt-3 mb-4">
-              Lorem diam sit erat dolor elitr et, diam lorem justo amet clita
-              stet eos sit. Elitr dolor duo lorem, elitr clita ipsum sea. Diam
-              amet erat lorem stet eos. Diam amet et kasd eos duo.
-            </p>
+            style="min-height: 350px !important;user-select: none;color: transparent;background-image: url(./img/logo.ico);background-size: cover;background-repeat: no-repeat;background-position: center;">
           </div>
         </div>
         <div class="col-lg-8 col-md-6">
@@ -450,7 +429,7 @@
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
-                <p class="mb-0">123 Street, Herat, AF</p>
+                <p class="mb-0">Bekrabad, Herat, Afghanistan, 3000</p>
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-envelope-open text-primary me-2"></i>
@@ -467,8 +446,10 @@
               <div class="d-flex mt-4">
                 <a class="btn btn-primary btn-square me-2" title="Y.S.F Telegram" target="_blank"
                   href="https://t.me/youthsaviorscf"><i class="fab fa-telegram fw-normal"></i></a>
+                <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
                 <a class="btn btn-primary btn-square me-2" title="Y.S.F Telegram Channel" target="_blank"
-                  href="https://t.me/youthsaviorfoundation"><i class="fab fa-telegram fw-normal"></i></a>
+                  href="https://t.me/youthsaviorfoundation"><i class="fab fa-telegram-plane fw-normal"></i></a>
+                <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
               </div>
             </div>
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
@@ -479,7 +460,11 @@
                 <a class="text-light mb-2" href="./index.html"><i
                     class="fa fa-arrow-right text-primary me-2"></i>Home</a>
                 <a class="text-light mb-2" href="./about-us.html"><i
-                    class="fa fa-arrow-right text-primary me-2"></i>About Us</a>
+                    class="fa fa-arrow-right text-primary me-2"></i>About
+                  Us</a>
+                <a class="text-light mb-2" href="./Hossaini.html"><i
+                    class="fa fa-arrow-right text-primary me-2"></i>About
+                  Founder</a>
                 <a class="text-light mb-2" href="./effective-personalities.html"><i
                     class="fa fa-arrow-right text-primary me-2"></i>Effective Personalities</a>
                 <a class="text-light mb-2" href="./letters-of-appreciation.html"><i
@@ -499,6 +484,8 @@
                     class="fa fa-arrow-right text-primary me-2"></i>Contracts</a>
                 <a class="text-light mb-2" href="./members.html"><i
                     class="fa fa-arrow-right text-primary me-2"></i>Members</a>
+                <a class="text-light mb-2" href="./committee.html"><i
+                    class="fa fa-arrow-right text-primary me-2"></i>Committee</a>
                 <a class="text-light mb-2" href="./vision-and-mission.html"><i
                     class="fa fa-arrow-right text-primary me-2"></i>Vision&mission</a>
                 <a class="text-light mb-2" href="./contact.html"><i
@@ -538,8 +525,6 @@
   <script src="lib/waypoints/waypoints.min.js"></script>
   <script src="lib/counterup/counterup.min.js"></script>
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-  <!-- Template Javascript -->
   <script src="js/main.js"></script>
 
 </body>
